@startuml ChessDomainModel_v2_0_2

	title Chess Domain Model Version 2.0.2
	
	class Chess
    class Square
    class Player
	class Coordinate
	class ValidMoveRule
	class Board
	class Piece
	class Movement
	class Turn
	class Pawn
	class Rook
	class Knight
	class Bishop
	class Queen
	class King
	class Color
	class White
	class Black
	class Target
	class Steps
	class TypeStep
	class OneStep
	class Forward
	class ManySteps
	class Destination
	class Checkmate
	
	class MatchResult
	class EmptySquare
	class Checkmate
	class Capture
	class NotAllowed
	

	Chess *--> Board
	Chess *--> Turn
	Turn *--> "2" Player
    Board *--> "8x8" Square
	Board *--> "32" Piece
	Player o--> Color
	Player --> Target
	Player ..> "*" Movement
	Player --> "16" Piece
	Target --> Checkmate
	Color ^-- White
	Color ^-- Black
	Piece *--> "1..*" ValidMoveRule
	Piece ^-- Pawn
	Piece ^-- Bishop
	Piece ^-- Knight
	Piece ^-- Rook
	Piece ^-- Queen
	Piece ^-- King
	Piece "16" o--> Color
	Movement --> Board
	Movement ..> "To" Destination
    Movement ..> "From" Square
	Movement --> Piece : move
	Movement *--> MatchResult
	MatchResult ^-- Capture
	MatchResult ^-- EmptySquare
	MatchResult ^-- NotAllowed
	Capture ^-- Checkmate
	Checkmate ..>  King
	Square *--> Coordinate
	Square ^-- Destination
	Square o--> "0..1" Piece
	Coordinate *--> Row
	Coordinate *--> Column
	ValidMoveRule ^-- Horizontal
	ValidMoveRule ^-- Vertical
	ValidMoveRule ^-- Diagonal
	ValidMoveRule ^-- L
	Steps *--> TypeStep
	TypeStep ^-- OneStep
	OneStep ^-- Forward
	TypeStep ^-- ManySteps
	Steps ^-- Horizontal
	Steps ^-- Vertical
	Steps ^-- Diagonal

	

@enduml